[gd_scene load_steps=2 format=2]

[ext_resource path="res://Screens/Menu/Lobby/Guest/GuestEntry.gd" type="Script" id=1]

[node name="GuestEntry" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 20.0
script = ExtResource( 1 )

[node name="Role" type="Label" parent="."]
margin_right = 38.0
margin_bottom = 20.0
size_flags_vertical = 3
text = "Guest"
valign = 1

[node name="Name" type="Label" parent="."]
margin_left = 42.0
margin_right = 898.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Name"
align = 1
valign = 1

[node name="Status" type="Label" parent="."]
margin_left = 902.0
margin_right = 961.0
margin_bottom = 20.0
size_flags_vertical = 3
text = "WAITING"
align = 1
valign = 1

[node name="Move" type="Button" parent="."]
margin_left = 965.0
margin_right = 1001.0
margin_bottom = 20.0
size_flags_vertical = 3
disabled = true
text = "<=>"

[node name="Exit" type="Button" parent="."]
margin_left = 1005.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_vertical = 3
disabled = true
text = "x"

[connection signal="pressed" from="Move" to="." method="_on_Move_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
